tools/tests/ui/fail/l1044.cnf
// Test file for error code: L1044
// Expected error: Missing Unmatched character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
